--- a/oa-wallet-ios/Base.lproj/Main.storyboard
+++ b/oa-wallet-ios/Base.lproj/Main.storyboard
@@ -64,18 +64,37 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Elr-9G-gnD" userLabel="loadingIndicatorView">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <subviews>
+                                    <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="mqL-Oj-vXI" userLabel="loadingIndicator">
+                                        <rect key="frame" x="197" y="399" width="20" height="20"/>
+                                    </activityIndicatorView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="mqL-Oj-vXI" firstAttribute="centerY" secondItem="Elr-9G-gnD" secondAttribute="centerY" id="JZT-MQ-qzs"/>
+                                    <constraint firstItem="mqL-Oj-vXI" firstAttribute="centerX" secondItem="Elr-9G-gnD" secondAttribute="centerX" id="xgc-4K-sfg"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Elr-9G-gnD" secondAttribute="bottom" id="4gp-af-YSt"/>
                             <constraint firstItem="LZS-Y0-ywB" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="8ov-c7-hcB"/>
+                            <constraint firstItem="Elr-9G-gnD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="FZY-5t-HQz"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="LZS-Y0-ywB" secondAttribute="bottom" id="fM0-k9-ZGe"/>
+                            <constraint firstItem="Elr-9G-gnD" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="fSs-RP-Kzy"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LZS-Y0-ywB" secondAttribute="trailing" id="nEt-mg-lSH"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Elr-9G-gnD" secondAttribute="trailing" id="oPk-y9-qv9"/>
                             <constraint firstItem="LZS-Y0-ywB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="pFY-8Z-vMw"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="documentTableView" destination="LZS-Y0-ywB" id="Vyj-iA-Hk2"/>
+                        <outlet property="loadingIndicator" destination="mqL-Oj-vXI" id="PZx-6F-ke0"/>
+                        <outlet property="loadingIndicatorView" destination="Elr-9G-gnD" id="gQ5-6a-3Ei"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
